<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="initial_msg">別のアプリで何らかのURLを開いて下さい。\n
    ブラウザ選択ダイアログが表示されたら、このアプリを選択して下さい。\n
    開いたURLの履歴が下に表示されます。</string>
    
    <string name="app_name">URL History</string>
    
    <string name="mnu_exit">閉じる</string>
    <string name="mnu_send">メール送信</string>  
    <string name="mnu_clear">全削除</string>  
    <string name="mnu_pref">設定</string>  
	<string name="mnu_browser">ブラウザで開く</string>
	<string name="mnu_delete">削除</string>
    
	<string name="pref_cat_email">メール設定</string>
    <string name="pref_to_addr1">宛先</string>
	<string name="pref_to_addr1_summary">宛先のEmailアドレス。カンマ(,)で区切って複数登録も可能。</string>
	<string name="pref_to_addr1_default"></string>

	<string name="pref_prefix">メールの件名</string>
	<string name="pref_prefix_summary"></string>
	<string name="pref_prefix_default">[URL History] </string>

	<string name="pref_footer">メール本文の末尾</string>
	<string name="pref_footer_summary"></string>
	<string name="pref_footer_default">---\nSent by URL History.</string>

	<string name="pref_cat_browser">ブラウザ設定</string>
	<string name="pref_open_browser">自動的にブラウザを開く</string>
    
	<string name="msg_invalid_to_addr">宛先のEmailアドレスが空白かまたは正しくありません。\n設定を開いてEmailアドレスを入力して下さい。\n(例： youremail@gmail.com)</string>
	<string name="msg_getting_title">タイトルを取得しています...</string>
	<string name="msg_no_title">(無題)</string>
	<string name="msg_offline_title">(オフライン)</string>
	<string name="msg_initial_title">タイトルを取得中...</string>
	
	<string name="msg_select">選択して下さい</string>
	
</resources>
